--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "date-fns": "^2.29.3",
     "framer-motion": "^7.10.0",
+    "mongodb": "^3.5.9",
+    "mongoose": "^6.8.0",
     "next": "13.0.7",
-    "react": "18.2.0",
+    "react": "17.0.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-table": "^7.8.0",
