--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/error-message": "^2.0.1",
     "@next/font": "13.0.7",
     "@tanstack/react-table": "^8.7.3",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "framer-motion": "^7.10.0",
     "mongodb": "^3.5.9",
     "mongoose": "^6.8.0",
     "next": "13.0.7",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "react-table": "^7.8.0",
     "typescript": "4.9.4"
