--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "bcrypt": "^5.1.0",
+    "canvas-confetti": "^1.6.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "framer-motion": "^7.10.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.5.9",
-    "mongoose": "^6.8.0",
+    "mongoose": "^6.8.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
