--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Table/Table.jsx", "components/Table/BookingColumns.js", "components/BookingInfo.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Table/Table.jsx", "components/Table/BookingColumns.js", "components/BookingInfo.jsx", "pages/_app.jsx", "components/Navbar.tsx", "pages/quotes/rates.jsx"],
   "exclude": ["node_modules"]
 }
