--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
-    "@chakra-ui/react": "^2.4.3",
+    "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/error-message": "^2.0.1",
+    "@mui/base": "^5.0.0-alpha.112",
     "@next/font": "13.0.7",
     "@tanstack/react-table": "^8.7.3",
     "@types/node": "18.11.15",
@@ -23,15 +24,15 @@
     "canvas-confetti": "^1.6.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
-    "framer-motion": "^7.10.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^3.5.9",
-    "mongoose": "^6.8.1",
+    "framer-motion": "^6.5.1",
+    "framesync": "^0.3.0",
+    "fs-extra": "^11.1.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
+    "react-step-progress": "^1.0.3",
     "react-table": "^7.8.0",
     "typescript": "4.9.4"
   },
